# ai_generation_ui

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ARCHITECTURE_REFACTOR.md  IMPLEMENTATION_PLAN_PROVIDER_EXPANSION.md  IMPLEMENTATION_VER-0.3.1.md  IMPLEMENTATION_VER-0.3.md  IMPLEMENTATION_VER-0.4.3-TO-0.4.9.md  IMPLEMENTATION_VER-0.5.0-TO-0.5.10.md  IMPLEMENTATION_VER-0.5.0-TO-0.5.9.md  IMPLEMENTATION_VER-0.6.0.md  IMPLEMENTATION_VER-0.6.10-pricing-scrape.json  IMPLEMENTATION_VER-0.6.10-replicate-api-snapshot.json  IMPLEMENTATION_VER-0.6.10.md  IMPLEMENTATION_VER-0.6.5.md  IMPLEMENTATION_VER-0.7.0.md  IMPLEMENTATION_VER-0.8.0.md  IMPLEMENTATION_VER-0.9.0-pricing-scrape.json  IMPLEMENTATION_VER-0.9.0-replicate-api-snapshot.json  IMPLEMENTATION_VER-0.9.0.md  IMPLEMENTATION_VER-1.0.0.md  IMPLEMENTATION_VER-1.0.1-capability-remediation.md  ITER_1_IMPLEMENTATION.md  README.md  REFERENCE.md  ROADMAP.md  UI_ASSESSMENT_PRE_V1.md  UI_Decisions.md  app.py  pyproject.toml
UI_UX/: observations.md
scripts/: model_diagnostics.py  paid_smoke.py
src/: __init__.py  audio_gen.py  audio_models_config.py  audio_payload.py  config.py  cost_tracker.py  domain.py  generation_pipeline.py  generation_progress.py  generation_registry.py  generation_service.py  history_service.py  image_gen.py  image_models_config.py  image_payload.py  models_config.py  output_asset.py  pricing.py  probe_fixtures.py  replicate_payload.py  schema_diagnostics.py  storage_service.py  threed_gen.py  threed_models_config.py  utils.py  validation.py  (+2 more)
(+50 files in other folders)
