[project]
name = "ai-generation-ui"
version = "1.0.0"
description = "Streamlit interface for video, 3D, and audio generation via Replicate API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58.0",
    "replicate>=1.0.7",
    "python-dotenv>=1.2.2",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 88
target-version = ["py311"]
